<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tV_input"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:text="@string/_0"
        android:background="@color/light_gray"
        android:padding="10dp"
        android:textSize="48sp"
        android:gravity="bottom|end"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_7"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:onClick="onDigit"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_8"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:onClick="onDigit"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_9"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:onClick="onDigit"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_divide"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/divide"
            android:onClick="onOperator"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_4"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:onClick="onDigit"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_5"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:onClick="onDigit"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_6"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:onClick="onDigit"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_multiply"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:onClick="onOperator"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_1"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:onClick="onDigit"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_2"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            android:onClick="onDigit"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_3"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            android:onClick="onDigit"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_subtract"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/subtract"
            android:onClick="onOperator"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_point"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/point"
            android:onClick="onDecimalPoint"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_0"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            android:onClick="onDigit"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clear"
            android:onClick="onClear"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_add"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add"
            android:onClick="onOperator"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_omit"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/del"
            android:onClick="onDel"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_ans"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/ans"
            android:onClick="onEqual"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>